production/k8s/neg-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: deploymentservice-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: deployment-api-addr
    networking.gke.io/managed-certificates: deployment-api
spec:
  rules:
  - host: deployment.api.microclimatehome.com
    http:
      paths:
      - path: /api.DeploymentManagementService/*
        backend:
          serviceName: deployment-service
          servicePort: 80
      - path: /api.UserService/*
        backend:
          serviceName: user-service
          servicePort: 80
      - path: /api.PeripheralManagementService/*
        backend:
          serviceName: peripheral-service
          servicePort: 80
      - path: /api.PeripheralMeasurementEventService/*
        backend:
          serviceName: event-service
          servicePort: 80
